Major refactor. Everything is way more organized. Also, now we can download files from the remote server.